# sfml_checkers

./: .gitignore  CMakeLists.txt  cmake.help  draw_board.cpp  game_object.h  main.cpp  utils.h
